src/objects/ffr__XXXAllTypes__c.object
<CustomObject>
    <description>For internal use only.</description>
    <fields>
        <fullName>ffr__AccountHyperlink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; ffr__AccountLookup__c, &quot;Account Link&quot;)</formula>
        <label>Account Hyperlink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__AccountLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>XXX All Types</relationshipLabel>
        <relationshipName>XXX_All_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__ActualValue__c</fullName>
        <label>ActualValue</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__AutoNumber__c</fullName>
        <displayFormat>N-{00000}</displayFormat>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ffr__BudgetValue__c</fullName>
        <label>BudgetValue</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__Dated__c</fullName>
        <label>Dated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffr__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ffr__EncryptedText__c</fullName>
        <label>EncryptedText</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ffr__ForecastValue__c</fullName>
        <label>ForecastValue</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__GeoLocationDecimal__c</fullName>
        <label>GeoLocationDecimal</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ffr__GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>ffr__LongText__c</fullName>
        <label>LongText</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffr__Percent__c</fullName>
        <label>Percent</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ffr__Period__c</fullName>
        <label>Period</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ffr__PicklistMulti__c</fullName>
        <label>PicklistMulti</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American</fullName>
                    <default>true</default>
                    <label>American</label>
                </value>
                <value>
                    <fullName>Australian</fullName>
                </value>
                <value>
                    <fullName>British</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Indian</fullName>
                </value>
                <value>
                    <fullName>Irish</fullName>
                </value>
                <value>
                    <fullName>Pakistani</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__RestrictedPicklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>one</fullName>
                </value>
                <value>
                    <fullName>two</fullName>
                </value>
                <value>
                    <fullName>three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__SFCurrency__c</fullName>
        <description>Salesforce Currency</description>
        <inlineHelpText>Salesforce Currency</inlineHelpText>
        <label>SFCurrency</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ffr__TextRich__c</fullName>
        <label>TextRich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ffr__Timing__c</fullName>
        <description>Timing is everything</description>
        <label>Timing Is Everything</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ffr__Types__c</fullName>
        <label>Types</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SharesOutstanding</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>eadCountPlan</fullName>
                </value>
                <value>
                    <fullName>Forecast</fullName>
                </value>
                <value>
                    <fullName>HeadCountActual</fullName>
                </value>
                <value>
                    <fullName>HeadCountBudget</fullName>
                </value>
                <value>
                    <fullName>HeadCountForecast</fullName>
                </value>
                <value>
                    <fullName>Shares</fullName>
                </value>
                <value>
                    <fullName>SharesInIssue</fullName>
                </value>
                <value>
                    <fullName>SharesPrice</fullName>
                </value>
                <value>
                    <fullName>Size</fullName>
                </value>
                <value>
                    <fullName>VolumeActual</fullName>
                </value>
                <value>
                    <fullName>VolumeBudget</fullName>
                </value>
                <value>
                    <fullName>VolumeForecast</fullName>
                </value>
                <value>
                    <fullName>VolumePlan</fullName>
                </value>
                <value>
                    <fullName>Cash Flow Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ffr__XXXPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>XXX Period</label>
        <referenceTo>ffr__XXXPeriod__c</referenceTo>
        <relationshipLabel>XXX All Types</relationshipLabel>
        <relationshipName>XXXAllTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>XXX All Types</label>
    <nameField>
        <label>XXX All Types Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XXX All Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>